modules/gdscript/tests/scripts/parser/errors/if_var_duplicated_definitions.gd
func test():
    if var x := 1, var x := 2:
        print("t")
